objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Schools/organizations can choose to use this field when a Contact record is active. When Contact records are created through SchoolForce Setup, this check box is selected.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activities__c</fullName>
        <inlineHelpText>A long text area that displays a student&apos;s activities.  These values display in the Activities box on the transcript.</inlineHelpText>
        <label>Activities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Actual_Graduation_Date__c</fullName>
        <inlineHelpText>Displays the student&apos;s actual graduation date.  This field must be updated manually. This field displays on the transcript.</inlineHelpText>
        <label>Actual Graduation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Admission_Code__c</fullName>
        <inlineHelpText>Displays a student&apos;s admission code. This field is automatically updated if the Admission Code field on the Student record is updated.</inlineHelpText>
        <label>Admission Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Re-Admitted in same school.</fullName>
                </value>
                <value>
                    <fullName>New - No prior school experience.</fullName>
                </value>
                <value>
                    <fullName>New - From Outside DC.</fullName>
                </value>
                <value>
                    <fullName>New - From Private DC School.</fullName>
                </value>
                <value>
                    <fullName>Transfer Within LEA.</fullName>
                </value>
                <value>
                    <fullName>Re-Admitted After Withdrawal.</fullName>
                </value>
                <value>
                    <fullName>Assessment for Special Education.</fullName>
                </value>
                <value>
                    <fullName>Entry from other LEA.</fullName>
                </value>
                <value>
                    <fullName>Scheduling Purposes only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Admission_Status__c</fullName>
        <description>The status given to a student when he or she is admitted to a school or an educational institution.</description>
        <inlineHelpText>Displays the status given to a student when he or she is admitted to a school or an educational institution. This field is automatically updated if the Admission Status field on the Student record is updated.</inlineHelpText>
        <label>Admission Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Regular Student</fullName>
                </value>
                <value>
                    <fullName>Probationary Student (Academic)</fullName>
                </value>
                <value>
                    <fullName>Probationary Student (Attendance)</fullName>
                </value>
                <value>
                    <fullName>Probationary Student (Behavioral)</fullName>
                </value>
                <value>
                    <fullName>Probationary Student (Other)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF(MONTH(TODAY())&gt;MONTH(Date_of_Birth__c),YEAR(TODAY())-YEAR(Date_of_Birth__c),IF(AND(MONTH(TODAY())=MONTH(Date_of_Birth__c),DAY(TODAY())&gt;=DAY(Date_of_Birth__c)),YEAR(TODAY())-YEAR(Date_of_Birth__c),(YEAR(TODAY())-YEAR(Date_of_Birth__c))-1))</formula>
        <inlineHelpText>Displays student&apos;s date of birth. This field is automatically updated if the Date of Birth field on the Student record is updated.</inlineHelpText>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_Date__c</fullName>
        <description>The month, day, and year on which the individual filed the employment application.</description>
        <inlineHelpText>Displays staff application date of submission.</inlineHelpText>
        <label>Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Best_Place_of_Contact__c</fullName>
        <inlineHelpText>Can be used to mark a parent/guardian&apos;s preferred phone number. The default options are Work, Home, and Cell.</inlineHelpText>
        <label>Preferred Phone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Cell</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Birth_Place_City__c</fullName>
        <inlineHelpText>Displays the student&apos;s birth city. This field is automatically updated if the Birth Place - City field on the Student record is updated.</inlineHelpText>
        <label>Birth Place - City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Birth_Place_State__c</fullName>
        <inlineHelpText>Displays student&apos;s birth state. This field is automatically updated if the Birth Place - State field on the Student record is updated.</inlineHelpText>
        <label>Birth Place - State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certification_Status__c</fullName>
        <inlineHelpText>Displays Yes or No if staff member is certified. This field must be manually populated.</inlineHelpText>
        <label>Certification Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cohort__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Student contacts relationship to their cohort</description>
        <inlineHelpText>Displays student cohort. This field is initially entered by the Cohort Wizard. If a student&apos;s cohort changes then this field must be manually updated.</inlineHelpText>
        <label>Cohort</label>
        <referenceTo>Cohort__c</referenceTo>
        <relationshipLabel>Student Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>Displays the most recent Overall Comments written for the student. This field is automatically updated if the Comments field on the Student record is updated.</inlineHelpText>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_18_digit_id__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact 18 digit id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_ID__c</fullName>
        <description>Contact ID for all created contacts</description>
        <displayFormat>C-{00000000}</displayFormat>
        <externalId>true</externalId>
        <label>Contact ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Country_of_Origin__c</fullName>
        <inlineHelpText>Displays student&apos;s country of origin. This field is automatically updated if the Country of Origin field on the Student record is updated.</inlineHelpText>
        <label>Country of Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>United States</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_School_Year__c</fullName>
        <formula>User__r.Current_School_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current School Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currently_evaluated_for_special_ed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Displays whether the student has been evaluated for special ed. This field is automatically updated if the Currently evaluated for special ed? field on the Student record is updated.</inlineHelpText>
        <label>Currently evaluated for special ed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Detailed_Exit_Reason__c</fullName>
        <description>The primary reason for which a student discontinued schooling or left school before graduation or matriculation.</description>
        <inlineHelpText>The primary reason for which a student discontinued schooling or left school before graduation or matriculation. This field is automatically updated if the Detailed Exit Reason field on the Student record is updated.</inlineHelpText>
        <label>Detailed Exit Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Behavioral Difficulty</fullName>
                </value>
                <value>
                    <fullName>Dislike of School Experience</fullName>
                </value>
                <value>
                    <fullName>Economic Reasons</fullName>
                </value>
                <value>
                    <fullName>Employment</fullName>
                </value>
                <value>
                    <fullName>Entered Criminal Justice System</fullName>
                </value>
                <value>
                    <fullName>Failed Required Test</fullName>
                </value>
                <value>
                    <fullName>Lack of Appropriate Curriculum</fullName>
                </value>
                <value>
                    <fullName>Lack of Childcare</fullName>
                </value>
                <value>
                    <fullName>Lack of Transportation</fullName>
                </value>
                <value>
                    <fullName>Language Difficulty</fullName>
                </value>
                <value>
                    <fullName>Marriage</fullName>
                </value>
                <value>
                    <fullName>Military Reason</fullName>
                </value>
                <value>
                    <fullName>Needed at home.</fullName>
                </value>
                <value>
                    <fullName>Parent/Guardian Influence</fullName>
                </value>
                <value>
                    <fullName>Poor relationships with fellow students</fullName>
                </value>
                <value>
                    <fullName>Poor student-staff relationships</fullName>
                </value>
                <value>
                    <fullName>Pregnancy</fullName>
                </value>
                <value>
                    <fullName>Religion Reason</fullName>
                </value>
                <value>
                    <fullName>Substance Abuse</fullName>
                </value>
                <value>
                    <fullName>Failed Graduation Examination</fullName>
                </value>
                <value>
                    <fullName>Academic Difficulty</fullName>
                </value>
                <value>
                    <fullName>Unknown Reason</fullName>
                </value>
                <value>
                    <fullName>Technical Difficulty</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disability_Flag__c</fullName>
        <inlineHelpText>This field is automatically updated if the Disability Flag field on the Student record is updated.</inlineHelpText>
        <label>Disability Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District_of_Columbia_C_Student_ID__c</fullName>
        <inlineHelpText>Do not use this field; it is no longer used by SchoolForce.</inlineHelpText>
        <label>Student ID Number *Retired*</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EC_1_Relationship_to_Student__c</fullName>
        <inlineHelpText>Displays the designated emergency contact&apos;s relationship to student/staff. This field is automatically updated if the same field on the Student record is updated.</inlineHelpText>
        <label>EContact  #1 Relationship to Student</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Guardian</fullName>
                </value>
                <value>
                    <fullName>Aunt</fullName>
                </value>
                <value>
                    <fullName>Uncle</fullName>
                </value>
                <value>
                    <fullName>Grandmother</fullName>
                </value>
                <value>
                    <fullName>Grandfather</fullName>
                </value>
                <value>
                    <fullName>Brother</fullName>
                </value>
                <value>
                    <fullName>Sister</fullName>
                </value>
                <value>
                    <fullName>Neighbor</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Need values here</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EContact_1_Cell_Phone__c</fullName>
        <inlineHelpText>Displays the designated emergency contact&apos;s cell phone number. This field is automatically updated if the same field on the Student record is updated.</inlineHelpText>
        <label>EContact #1 Cell Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>EContact_1_Home_Phone__c</fullName>
        <inlineHelpText>Displays the designated emergency contact&apos;s home phone number. This field is automatically updated if the same field on the Student/Staff record is updated.</inlineHelpText>
        <label>EContact #1 Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>EContact_2_Cell_Phone__c</fullName>
        <inlineHelpText>Displays the designated emergency contact&apos;s cell phone number. This field is automatically updated if the same field on the Student/Staff record is updated.</inlineHelpText>
        <label>EContact #2 Cell Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>EContact_2_Home_Phone__c</fullName>
        <inlineHelpText>Displays the designated emergency contact&apos;s home phone number. This field is automatically updated if the same field on the Student/Staff record is updated.</inlineHelpText>
        <label>EContact #2 Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>EContact_2_Work_Phone__c</fullName>
        <inlineHelpText>Displays the designated  emergency conctact&apos;s work phone number. This field is automatically updated if the same field on the Student/Staff record is updated.</inlineHelpText>
        <label>EContact #2 Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ELH_Provided_Student_ID__c</fullName>
        <inlineHelpText>Do not use this field; it is no longer used by SchoolForce.</inlineHelpText>
        <label>ELH Provided Student ID *Retired*</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ELL__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this field if the student is an English Language Learner. This field is automatically populated if the field is included in the initial CSV Loader load of the student.</inlineHelpText>
        <label>ELL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Econtact_2_Relationship_to_Student__c</fullName>
        <inlineHelpText>Displays the designated emergency contact&apos;s relationship to student. This field is automatically updated if the same field on the Student record is updated.</inlineHelpText>
        <label>Econtact #2 Relationship to Student</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Guardian</fullName>
                </value>
                <value>
                    <fullName>Aunt</fullName>
                </value>
                <value>
                    <fullName>Uncle</fullName>
                </value>
                <value>
                    <fullName>Grandmother</fullName>
                </value>
                <value>
                    <fullName>Grandfather</fullName>
                </value>
                <value>
                    <fullName>Brother</fullName>
                </value>
                <value>
                    <fullName>Sister</fullName>
                </value>
                <value>
                    <fullName>Neighbor</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_to_SMS_Address__c</fullName>
        <formula>IF (
AND (
NOT(ISBLANK( MobilePhone )),
NOT(ISBLANK( TEXT(Wireless_Provider__c )))
),
Case ( Wireless_Provider__c,
&quot;ATT&quot;, SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( MobilePhone , &apos;.&apos;, &apos;&apos;) , &apos; &apos;, &apos;&apos;) , &apos;-&apos;, &apos;&apos;) , &apos;)&apos;, &apos;&apos;) , &apos;(&apos;, &apos;&apos;)&amp;&quot;@txt.att.net&quot;,
&quot;Verizon&quot;, SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( MobilePhone , &apos;.&apos;, &apos;&apos;) , &apos; &apos;, &apos;&apos;) , &apos;-&apos;, &apos;&apos;) , &apos;)&apos;, &apos;&apos;) , &apos;(&apos;, &apos;&apos;)&amp;&quot;@vtext.com&quot;,
&quot;Sprint&quot;,SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( MobilePhone , &apos;.&apos;, &apos;&apos;) , &apos; &apos;, &apos;&apos;) , &apos;-&apos;, &apos;&apos;) , &apos;)&apos;, &apos;&apos;) , &apos;(&apos;, &apos;&apos;)&amp;&quot;@messaging.sprintpcs.com&quot;,
&quot;T-Mobile&quot;,SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( MobilePhone , &apos;.&apos;, &apos;&apos;) , &apos; &apos;, &apos;&apos;) , &apos;-&apos;, &apos;&apos;) , &apos;)&apos;, &apos;&apos;) , &apos;(&apos;, &apos;&apos;)&amp;&quot;@tmomail.net&quot;,
&quot;Virgin Mobile&quot;, SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( MobilePhone , &apos;.&apos;, &apos;&apos;) , &apos; &apos;, &apos;&apos;) , &apos;-&apos;, &apos;&apos;) , &apos;)&apos;, &apos;&apos;) , &apos;(&apos;, &apos;&apos;)&amp;&quot;@vmobl.com&quot;,
&quot;&quot;),

&quot;&quot;)</formula>
        <inlineHelpText>SchoolForce automatically updates this field using the information you enter into the Mobile Phone and Mobile Carrier fields. It is used for sending attendance alerts to parents via SMS.</inlineHelpText>
        <label>Email to SMS Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_1_Name__c</fullName>
        <inlineHelpText>Displays designated emergency contact&apos;s name. This field is automatically updated if the same field on the Student/Staff record is updated.</inlineHelpText>
        <label>EContact #1 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_1_Work_Phone__c</fullName>
        <inlineHelpText>Displays designated  emergency contact&apos;s work phone number. This field is automatically updated if the same field on the Student/Staff record is updated.</inlineHelpText>
        <label>EContact #1 Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_2_Name__c</fullName>
        <inlineHelpText>Displays designated emergency contact&apos;s name. This field is automatically updated if the same field on the Student/Staff record is updated.</inlineHelpText>
        <label>EContact #2 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <formula>User__r.Employee_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employment_End_Date__c</fullName>
        <inlineHelpText>Displays staff member&apos;s employment end date. You must enter this date manually.</inlineHelpText>
        <label>Employment End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employment_Start_Date__c</fullName>
        <inlineHelpText>Displays staff member&apos;s employment start date. You must enter this date manually.</inlineHelpText>
        <label>Employment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employment_Status__c</fullName>
        <inlineHelpText>Displays staff contact&apos;s status of employment.  The picklist values can be customized for the field on the Contact object. You must enter this date manually.</inlineHelpText>
        <label>Employment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Probationary</fullName>
                </value>
                <value>
                    <fullName>Contractual</fullName>
                </value>
                <value>
                    <fullName>Substitute/temporary</fullName>
                </value>
                <value>
                    <fullName>Tenured or permanent</fullName>
                </value>
                <value>
                    <fullName>Volunteer/no contract</fullName>
                </value>
                <value>
                    <fullName>Employed or affiliated with outside organization</fullName>
                </value>
                <value>
                    <fullName>Contingent upon funding</fullName>
                </value>
                <value>
                    <fullName>Non-contractual</fullName>
                </value>
                <value>
                    <fullName>Self-employed part-time</fullName>
                </value>
                <value>
                    <fullName>Employed or affiliated with outside agency part-time</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Entry_Date__c</fullName>
        <inlineHelpText>Displays the student&apos;s date of entry. This field is automatically updated if the same field on the Student record is updated.</inlineHelpText>
        <label>Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entry_Type__c</fullName>
        <description>The process by which a student enters a school during a given academic session.</description>
        <inlineHelpText>Indicates the situation under which the student entered the school. This field is automatically updated if the Entry Code field on the Student record is updated.</inlineHelpText>
        <label>Entry Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Transfer from a public school in the same local education agency</fullName>
                </value>
                <value>
                    <fullName>Transfer from a public school in a different local education agency in the same state</fullName>
                </value>
                <value>
                    <fullName>Transfer from a public school in a different state</fullName>
                </value>
                <value>
                    <fullName>Transfer from a private, non-religiously-affiliated school in the same local education agency</fullName>
                </value>
                <value>
                    <fullName>Transfer from a private, non-religiously-affiliated school in a different local education agency in the same state</fullName>
                </value>
                <value>
                    <fullName>Transfer from a private, non-religiously-affiliated school in a different state</fullName>
                </value>
                <value>
                    <fullName>Transfer from a private, religiously-affiliated school in the same local education agency</fullName>
                </value>
                <value>
                    <fullName>Transfer from a private, religiously-affiliated school in a different local education agency in the same state</fullName>
                </value>
                <value>
                    <fullName>Transfer from a private, religiously-affiliated school in a different state</fullName>
                </value>
                <value>
                    <fullName>Transfer from a school outside of the country</fullName>
                </value>
                <value>
                    <fullName>Transfer from an institution</fullName>
                </value>
                <value>
                    <fullName>Transfer from a charter school</fullName>
                </value>
                <value>
                    <fullName>Transfer from home schooling</fullName>
                </value>
                <value>
                    <fullName>Re-entry from the same school with no interruption of schooling</fullName>
                </value>
                <value>
                    <fullName>Re-entry after a voluntary withdrawal</fullName>
                </value>
                <value>
                    <fullName>Re-entry after an involuntary withdrawal</fullName>
                </value>
                <value>
                    <fullName>Original entry into a United States school</fullName>
                </value>
                <value>
                    <fullName>Original entry into a United States school from a foreign country with no interruption in schooling</fullName>
                </value>
                <value>
                    <fullName>Original entry into a United States school from a foreign country with an interruption in schooling</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <inlineHelpText>Displays the student&apos;s ethnic background. This field is automatically updated if the same field on the Student record is updated.</inlineHelpText>
        <label>Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hispanic / Latino</fullName>
                </value>
                <value>
                    <fullName>Non-Hispanic / Latino</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exit_Comments__c</fullName>
        <inlineHelpText>Displays additional details about the student&apos;s exit/withdrawal from the school. This field is automatically updated if the same field on the Student record is updated.</inlineHelpText>
        <label>Exit Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Exit_Date__c</fullName>
        <description>The date a student left the school or discontinued schooling prior to graduation or matriculation.</description>
        <inlineHelpText>Displays the date a student left the school or discontinued schooling prior to graduation or matriculation. This field is automatically updated if the same field on the Student record is updated.</inlineHelpText>
        <label>Exit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exit_Status__c</fullName>
        <description>An indication as to whether an instance of student exit/withdrawal is considered to be of a permanent or temporary nature.</description>
        <inlineHelpText>Indicates whether an instance of student exit/withdrawal is considered to be permanent or temporary. This field is automatically updated if the same field on the Student record is updated.</inlineHelpText>
        <label>Exit Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Permanent Exit/Withdrawal</fullName>
                </value>
                <value>
                    <fullName>Temporary Exit/Withdrawal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Extension__c</fullName>
        <inlineHelpText>Displays the contact&apos;s phone extension. You must enter this extension manually.</inlineHelpText>
        <label>Extension</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Time_Status__c</fullName>
        <inlineHelpText>Displays whether a staff contact has full-time or part-time employment.</inlineHelpText>
        <label>Full-Time Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full-time employment</fullName>
                </value>
                <value>
                    <fullName>Part-time employment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>